# simd-raytracer

./: .gitignore  CMakeLists.txt  README.md  flamegraph.html  gecko_profile.json
include/raytracer/: config.hpp
include/raytracer/core/math/: aabb3.hpp  mat3.hpp  ray3.hpp  vec2.hpp  vec3.hpp
include/raytracer/io/image/: ppm.hpp
include/raytracer/io/json/: loader.hpp
include/raytracer/render/: hit_record.hpp  render.hpp
include/raytracer/render/accel/: accel.hpp  kd_tree.hpp  kd_tree_simd.hpp  list.hpp
include/raytracer/render/tile/: bucket.hpp  queue.hpp  region.hpp  single.hpp  tile.hpp
include/raytracer/scene/: camera.hpp  color.hpp  image.hpp  light.hpp  scene.hpp  settings.hpp
include/raytracer/scene/material/: constant_material.hpp  diffuse_material.hpp  material.hpp  material_queries.hpp  queries.hpp  reflective.hpp  refractive.hpp  texture.hpp
include/raytracer/scene/object/: hit.hpp  mesh.hpp  object.hpp  object_queries.hpp
include/raytracer/scene/primitive/: hit.hpp  primitive.hpp  primitive_queries.hpp  sphere.hpp  triangle.hpp
include/raytracer/scene/texture/: albedo.hpp  bitmap.hpp  checker.hpp  edge.hpp  queries.hpp  texture.hpp  texture_queries.hpp
include/raytracer/utils/: convert.hpp  rand.hpp
scenes/hw11/: scene0.crtscene
scenes/hw12/: scene0.crtscene  scene1.crtscene  scene2.crtscene  scene3.crtscene  scene4.crtscene
scenes/hw15/: scene2.crtscene
src/: main.cpp
